plugins {
    id("net.researchgate.release") version "3.0.2"
    id("io.github.gradle-nexus.publish-plugin") version "1.3.0"
}

allprojects {
    group = 'io.github.sfali23'
}

apply from: "${rootDir}/scripts/nexus-publish.gradle"

subprojects {
    apply plugin: 'maven-publish'
    apply plugin: 'signing'
    apply plugin: 'java-library'
    apply plugin: 'jacoco'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url = "https://s01.oss.sonatype.org/content/repositories/releases/"
        }
    }

    apply from: "${rootDir}/scripts/publishing.gradle"

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    tasks.withType(JavaCompile).tap {
        configureEach {
            options.encoding = 'UTF-8'
        }
    }

    java {
        withJavadocJar()
        withSourcesJar()
    }

    release {
        tagTemplate = 'v${version}'
    }

    afterEvaluate {
        afterReleaseBuild.dependsOn(publishToSonatype, closeAndReleaseSonatypeStagingRepository)
    }
}

